fix(style): change the hover effect on high contrast mode as in W3C

--- a/packages/styles/src/elements/link.scss
+++ b/packages/styles/src/elements/link.scss
@@ -28,7 +28,7 @@ a {
     }
 
     &:hover {
-      text-decoration: none;
+      text-decoration-thickness: 2px;
     }
 
     &:visited {
